src/test/ui/issues/issue-49934.stderr
error[E0774]: `derive` may only be applied to structs, enums and unions
  --> $DIR/issue-49934.rs:10:5
   |
LL |     #[derive(Debug)]
   |     ^^^^^^^^^^^^^^^^

error[E0774]: `derive` may only be applied to structs, enums and unions
  --> $DIR/issue-49934.rs:14:5
   |
LL |     #[derive(Debug)]
   |     ^^^^^^^^^^^^^^^^

error[E0774]: `derive` may only be applied to structs, enums and unions
  --> $DIR/issue-49934.rs:18:5
   |
LL |     #[derive(Debug)]
   |     ^^^^^^^^^^^^^^^^

error[E0774]: `derive` may only be applied to structs, enums and unions
  --> $DIR/issue-49934.rs:22:13
   |
LL |     let _ = #[derive(Debug)] "Hello, world!";
   |             ^^^^^^^^^^^^^^^^

error[E0774]: `derive` may only be applied to structs, enums and unions
  --> $DIR/issue-49934.rs:27:9
   |
LL |         #[derive(Debug)]
   |         ^^^^^^^^^^^^^^^^

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0774`.
